# ROB514

./: .gitignore  README.md  mac_install.sh  windows_install.bat
GUI/: gui_sliders.py
Probabilities/: probabilities.py
Python_tutorials/: lec_act_1_arrays.ipynb  lec_act_1_arrays.py  lec_act_2_plotting.ipynb  lec_act_2_plotting.py  lec_act_3_fitting.ipynb  lec_act_3_fitting.py  lec_act_5_matrices.ipynb  lec_act_6_fmin.ipynb  lec_act_6_fmin.py
ROSLabs/: dijkstra.ipynb  exploring.ipynb  exploring.py  path_planning.py
Reinforcement/: ROB514_RL.ipynb
RobotArm2D/: arm_forward_kinematics.py  arm_ik_gradient.py  arm_ik_jacobian.py  arm_inverse_kinematics.py  check_forward_kinematics.ipynb  check_forward_kinematrics.ipynb  check_inverse_kinematics.ipynb  check_matrices.ipynb  matrix_transforms.py  objects_in_world.py  robot_arm_2D.py
RobotHallway/: bayes_filter.py  check_bayes_filter.ipynb  check_kalman_filter.ipynb  check_particle_filter.ipynb  door_sensor.py  draw_robot_state.py  kalman_filter.py  particle_filter.py  robot_ground_truth.py  robot_sensors.py  robot_state_estimation.py  world_ground_truth.py  world_state.py
SimpleSLAM/: draw_robot_state.py  robot_state.py
Skills/: a_start_here_libraries.ipynb  arm_forward_ik.py  arm_forward_kinematics.py  arm_inverse_kinematics.py  check_forward_kinematrics.ipynb  check_image_mask_kmeans.ipynb  (+21 more)
rob456_hw3/: CMakeLists.txt  package.xml  rvizsetup.rviz
rob456_hw3/launch/: hw3.launch
rob456_hw3/src/: hw3.py  odom_error_printer.py  slam_error_printer.py
rob456_hw3/worlds/: manyDots.pgm  manyDotsNoisyOdom.world
(+62 files in other folders)
